added img width attrib

--- a/ollie-thra.html
+++ b/ollie-thra.html
@@ -31,7 +31,7 @@
       <aside>
       <figure>
         <h2 class="center">Epic Battle!</h2>
-        <img src="img/Sydney_battle.png" alt="Opie vs. Ollie-thra in Sidney Harbor.">
+        <img width="293" height="80" src="img/Sydney_battle.png" alt="Opie vs. Ollie-thra in Sidney Harbor.">
         <figcaption>Opie and Ollie-thra, mano a mano, in Sydney Harbor.</figcaption>
         
       </figure>
