lots of edits to all pages

--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
         <h1 class="center">About Opie, Destroyer of Worlds.</h1>
         <img id="star" src="img/opie_star.png" alt="star of darkness" >
         <img id="star" class="right" src="img/opie_star.png" alt="star of darkness" >
-        <p>Auctor vel nec dis tincidunt augue porta ac, magna nunc vel ut et, mattis cras et, lacus diam, lacus lorem vel aenean amet dis. Pulvinar? Diam lundium, elementum ridiculus et? Et habitasse platea pulvinar non et, cursus auctor tincidunt eu, pulvinar ridiculus. Egestas phasellus, habitasse et velit eros vel non sit ut, rhoncus rhoncus, magna. Elit, tincidunt integer rhoncus porta porttitor proin lorem. Augue cum dictumst sit ac adipiscing quis! Tristique pulvinar, ac diam sagittis turpis. In. Enim hac ut, pulvinar sagittis sed tristique, sagittis porta, magnis eu nec cum, enim, mauris natoque pid? Et pulvinar. Amet et augue ac, hac, eros a diam sagittis urna nunc purus! Urna sit enim? Lacus eros eros, porta. Turpis elementum, phasellus porta et urna, adipiscing, platea proin diam in lacus nisi nascetur. Nunc! Elementum? Lectus lundium integer, mus hac. Phasellus ut scelerisque lundium porttitor! Porta aliquet, parturient vel parturient parturient, augue risus? Lundium.</p>
+        <p>For your safety, and the safety of others, it is important to learn about a new threat to our world.  Opie, the Destroyer of Worlds, is beast of much terror and ferocity.</p>
+        <p>No one knows why Opie, the Destroyer of Worlds, feels the overwhelming urge to destroy.  Many in the scientific community assert that he "wants more pets."  Whatever the reasons behind these destructive rampages, we must band together and fight back lest our world be destroyed.</p>
+        <p>His very existance threatens the planet that we live on.  Since his emergence in April 2013, Opie, the Destroyer of Worlds, has been on a world wide rampage of distruction.  <a href="http://en.wikipedia.org/wiki/New_York_City" target="_blank">New York</a>, <a href="http://en.wikipedia.org/wiki/Tokyo" target="_blank">Tokyo</a>, and <a href="http://en.wikipedia.org/wiki/Sydney" target="_blank">Sydney</a> have all suffered from his wrath.</p>
+        
       </section>
       <aside>
         <div class="img_wrapper">
           <figure>
             <h2 class="center">The Awakening</h2>
             <img src="img/unicorn_o.jpg" alt="Opie emerges from the sea, on a unicorn.">
-            <figcaption>Opie emerged from the sea, trasported on the back of a unicorn.</figcaption>
-            
+            <figcaption>Opie emerged from the sea, trasported on the back of a unicorn.</figcaption>            
           </figure>
         </div>
       </aside>
