--- a/ollie-thra.html
+++ b/ollie-thra.html
@@ -26,14 +26,41 @@
         <h1 class="center">Opie vs. Ollie-thra</h1>
         <img id="star" src="img/opie_star.png" alt="star of darkness" >
         <img id="star" class="right" src="img/opie_star.png" alt="star of darkness" >
-        <p>Auctor vel nec dis tincidunt augue porta ac, magna nunc vel ut et, mattis cras et, lacus diam, lacus lorem vel aenean amet dis. Pulvinar? Diam lundium, elementum ridiculus et? Et habitasse platea pulvinar non et, cursus auctor tincidunt eu, pulvinar ridiculus. Egestas phasellus, habitasse et velit eros vel non sit ut, rhoncus rhoncus, magna. Elit, tincidunt integer rhoncus porta porttitor proin lorem. Augue cum dictumst sit ac adipiscing quis! Tristique pulvinar, ac diam sagittis turpis. In. Enim hac ut, pulvinar sagittis sed tristique, sagittis porta, magnis eu nec cum, enim, mauris natoque pid? Et pulvinar. Amet et augue ac, hac, eros a diam sagittis urna nunc purus! Urna sit enim? Lacus eros eros, porta. Turpis elementum, phasellus porta et urna, adipiscing, platea proin diam in lacus nisi nascetur. Nunc! Elementum? Lectus lundium integer, mus hac. Phasellus ut scelerisque lundium porttitor! Porta aliquet, parturient vel parturient parturient, augue risus? Lundium.</p>
+        
+        <p>In an attempt to quell the on going rampage of Opie, Destroyer of Worlds, the U.N. authorized the summoning of Ollie-thra, and an epic battle ensued.  In the waters of Sydney Harbor, Ollie-thra struck at Opie, Destroyer of Worlds.  As these two ferocious beasts struggled for dominance, stray laser beams and gouts of flame counsumed much of the waterfront.</p>
+        <table>
+          <h4>Comparison of statistics</h4>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Height</th>
+              <th>Primary Weapon</th>
+              <th>Fun Fact!</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Opie, Destroyer of Worlds</td>
+              <td>50 feet at the shoulder</td>
+              <td>Breathes fire.</td>
+              <td>Gives the cuddliest kisses!</td>
+            </tr>
+            <tr>
+              <td>Ollie-thra</td>
+              <td>3.03 rod at the shoulder</td>
+              <td>Gamma Fire eyes, hypnotic wings of terror.</td>
+              <td>Founding member of Hands Across America.</td>
+            </tr>
+          </tbody>
+        </table>
+        <p>Ultimately, the Battle of Sydney was a draw.  The fearsome struggle damaged each creature, and they were forced to retreat and lick their wounds.  Opie, Destryer of Worlds limped into the Australian Outback and vanished.  Ollie-thra flew back to his cocoon, high atop a volcano on a remote South Pacific island.  For now the world waits and wonders if there will be another meeting of these two titans.
       </section>
       <aside>
         <div class="img_wrapper">
           <figure>
             <h2 class="center">Epic Battle!</h2>
             <img src="img/Sydney_battle.png" alt="Opie vs. Ollie-thra in Sidney Harbor.">
-            <figcaption>Opie and Ollie-thra, mano a mano, in Sydney Harbor.</figcaption>
+            <figcaption>Sydney Harbor was the scene of a major showdown between Opie, Destroyer of Worlds and Ollie-thra.</figcaption>
             
           </figure>
         </div>
