--- a/new-york.html
+++ b/new-york.html
@@ -26,14 +26,22 @@
         <h1 class="center">Opie Destroys New York City.</h1>
         <img id="star" src="img/opie_star.png" alt="star of darkness" >
         <img id="star" class="right" src="img/opie_star.png" alt="star of darkness" >
-        <p>Auctor vel nec dis tincidunt augue porta ac, magna nunc vel ut et, mattis cras et, lacus diam, lacus lorem vel aenean amet dis. Pulvinar? Diam lundium, elementum ridiculus et? Et habitasse platea pulvinar non et, cursus auctor tincidunt eu, pulvinar ridiculus. Egestas phasellus, habitasse et velit eros vel non sit ut, rhoncus rhoncus, magna. Elit, tincidunt integer rhoncus porta porttitor proin lorem. Augue cum dictumst sit ac adipiscing quis! Tristique pulvinar, ac diam sagittis turpis. In. Enim hac ut, pulvinar sagittis sed tristique, sagittis porta, magnis eu nec cum, enim, mauris natoque pid? Et pulvinar. Amet et augue ac, hac, eros a diam sagittis urna nunc purus! Urna sit enim? Lacus eros eros, porta. Turpis elementum, phasellus porta et urna, adipiscing, platea proin diam in lacus nisi nascetur. Nunc! Elementum? Lectus lundium integer, mus hac. Phasellus ut scelerisque lundium porttitor! Porta aliquet, parturient vel parturient parturient, augue risus? Lundium.</p>
+        <p>Opie's attack of New York City was epic and devestating.  He left the city in absolute shambles.  All is woe and loss.</p>
+        <h2>Route of Destruction</h2>
+        <ol>
+          <li>Waded down the Hudson.</li>
+          <li>Torched the financial district.</li>
+          <li>Stepped on U.S. Naval attack ships, who were attempting to defend the city.</li>
+          <li>Rolled over on large sections of Brooklyn.</li>
+          <li>Then pranced back upstate, vanishing into the Adirondacks.</li>
+        </ol>
       </section>
       <aside>
         <div class="img_wrapper">
           <figure>
             <h2 class="center">Good-by Wall Street!</h2>
-            <img src="img/NYC-fire.png" alt="Opie's lays waste to Manhattan.">
-            <figcaption>Opie's lays waste to Manhattan.</figcaption>
+            <img src="img/NYC-fire.png" alt="Opie sets Manhattan on fire.">
+            <figcaption>Opie lays waste to Manhattan.</figcaption>
             
           </figure>
         </div>        
