--- a/tokyo.html
+++ b/tokyo.html
@@ -26,7 +26,15 @@
         <h1 class="center">Opie Rampages Through Tokyo.</h1>
         <img id="star" src="img/opie_star.png" alt="star of darkness" >
         <img id="star" class="right" src="img/opie_star.png" alt="star of darkness" >
-        <p>Auctor vel nec dis tincidunt augue porta ac, magna nunc vel ut et, mattis cras et, lacus diam, lacus lorem vel aenean amet dis. Pulvinar? Diam lundium, elementum ridiculus et? Et habitasse platea pulvinar non et, cursus auctor tincidunt eu, pulvinar ridiculus. Egestas phasellus, habitasse et velit eros vel non sit ut, rhoncus rhoncus, magna. Elit, tincidunt integer rhoncus porta porttitor proin lorem. Augue cum dictumst sit ac adipiscing quis! Tristique pulvinar, ac diam sagittis turpis. In. Enim hac ut, pulvinar sagittis sed tristique, sagittis porta, magnis eu nec cum, enim, mauris natoque pid? Et pulvinar. Amet et augue ac, hac, eros a diam sagittis urna nunc purus! Urna sit enim? Lacus eros eros, porta. Turpis elementum, phasellus porta et urna, adipiscing, platea proin diam in lacus nisi nascetur. Nunc! Elementum? Lectus lundium integer, mus hac. Phasellus ut scelerisque lundium porttitor! Porta aliquet, parturient vel parturient parturient, augue risus? Lundium.</p>
+        <p>Opie, the Destroyer of Worlds, began his reign of distruction in Tokyo.  This debut attack was swift and brutal.</p>
+        <h2>Statistics of Destruction</h2>
+        <ul>
+          <li>10,000 structures were burned.</li>
+          <li>400 bowls of Rammen were left uneaten durring the attack.</li>
+          <li>The attack lasted for 2 hours and 40 minutes.</li>
+          <li>Opie devoured the Tokyo Hard Rock Cafe.</li>
+          <li>55 fighter jets and 25 tanks were destroyed trying to stop the rampage.</li>
+        </ul>
       </section>
       <aside>
         <div class="img_wrapper">
