reorder nav for validation

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h6>Presented to raise public awareness by Wade Phillips</h6>
       <nav>
       <ul>
-        <a href="index.html"><li class="active">About</li></a>
-        <a href="tokyo.html"><li>Opie vs. Tokyo</li></a>
-        <a href="new-york.html"><li>Opie vs. New York</li></a>
-        <a href="ollie-thra.html"><li>Opie vs. Ollie-thra</li></a>
+        <li class="active"><a href="index.html">About</a></li>
+        <li><a href="tokyo.html">Opie vs. Tokyo</a></li>
+        <li><a href="new-york.html">Opie vs. New York</a></li>
+        <li><a href="ollie-thra.html">Opie vs. Ollie-thra</a></li>
       </ul>
     </nav>
     </header>
@@ -27,7 +27,7 @@
         <img id="star" src="img/opie_star.png" alt="star of darkness" >
         <img id="star" class="right" src="img/opie_star.png" alt="star of darkness" >
         <p>For your safety, and the safety of others, it is important to learn about a new threat to our world.  Opie, the Destroyer of Worlds, is beast of much terror and ferocity.</p>
-        <p>No one knows why Opie, the Destroyer of Worlds, feels the overwhelming urge to destroy.  Many in the scientific community assert that he "wants more pets."  Whatever the reasons behind these destructive rampages, we must band together and fight back lest our world be destroyed.</p>
+        <p>No one knows why Opie, the Destroyer of Worlds, feels the overwhelming urge to destroy.  Many in the scientific community assert ets.that he "wants more p"  Whatever the reasons behind these destructive rampages, we must band together and fight back our world lest be destroyed.</p>
         <p>His very existance threatens the planet that we live on.  Since his emergence in April 2013, Opie, the Destroyer of Worlds, has been on a world wide rampage of distruction.  <a href="http://en.wikipedia.org/wiki/New_York_City" target="_blank">New York</a>, <a href="http://en.wikipedia.org/wiki/Tokyo" target="_blank">Tokyo</a>, and <a href="http://en.wikipedia.org/wiki/Sydney" target="_blank">Sydney</a> have all suffered from his wrath.</p>
         
       </section>
