--- a/ollie-thra.html
+++ b/ollie-thra.html
@@ -14,10 +14,10 @@
         <h6>Presented to raise public awareness by Wade Phillips</h6>
       <nav>
       <ul>
-        <a href="index.html"><li>About</li></a>
-        <a href="tokyo.html"><li>Opie vs. Tokyo</li></a>
-        <a href="new-york.html"><li>Opie vs. New York</li></a>
-        <a href="ollie-thra.html"><li class="active">Opie vs. Ollie-thra</li></a>
+        <li><a href="index.html">About</a></li>
+        <li><a href="tokyo.html">Opie vs. Tokyo</a></li>
+        <li><a href="new-york.html">Opie vs. New York</a></li>
+        <li class="active"><a href="ollie-thra.html">Opie vs. Ollie-thra</a></li>
       </ul>
     </nav>
     </header>
@@ -29,7 +29,7 @@
         
         <p>In an attempt to quell the on going rampage of Opie, Destroyer of Worlds, the U.N. authorized the summoning of Ollie-thra, and an epic battle ensued.  In the waters of Sydney Harbor, Ollie-thra struck at Opie, Destroyer of Worlds.  As these two ferocious beasts struggled for dominance, stray laser beams and gouts of flame counsumed much of the waterfront.</p>
         <table>
-          <h4>Comparison of statistics</h4>
+          <caption>Comparison of statistics</caption>
           <thead>
             <tr>
               <th>Name</th>
