--- a/new-york.html
+++ b/new-york.html
@@ -14,10 +14,10 @@
         <h6>Presented to raise public awareness by Wade Phillips</h6>
       <nav>
       <ul>
-        <a href="index.html"><li >About</li></a>
-        <a href="tokyo.html"><li>Opie vs. Tokyo</li></a>
-        <a href="new-york.html"><li class="active">Opie vs. New York</li></a>
-        <a href="ollie-thra.html"><li>Opie vs. Ollie-thra</li></a>
+        <li><a href="index.html">About</a></li>
+        <li><a href="tokyo.html">Opie vs. Tokyo</a></li>
+        <li class="active"><a href="new-york.html">Opie vs. New York</a></li>
+        <li><a href="ollie-thra.html">Opie vs. Ollie-thra</a></li>
       </ul>
     </nav>
     </header>
