fix css vof validation

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
     <title>About Opie, Destroyer of Worlds.</title>
     <link href="css/styles.css" type="text/css" rel="stylesheet" />
 
@@ -23,9 +24,9 @@
     </header>
     <div id="content" class="clearfix">
       <section>
-        <h1 class="center">About Opie, Destroyer of Worlds.</h1>
-        <img id="star" src="img/opie_star.png" alt="star of darkness" >
-        <img id="star" class="right" src="img/opie_star.png" alt="star of darkness" >
+        <h2 class="center">About Opie, Destroyer of Worlds.</h2>
+        <img class="star" src="img/opie_star.png" alt="star of darkness" >
+        <img class="star right" src="img/opie_star.png" alt="star of darkness" >
         <p>For your safety, and the safety of others, it is important to learn about a new threat to our world.  Opie, the Destroyer of Worlds, is beast of much terror and ferocity.</p>
         <p>No one knows why Opie, the Destroyer of Worlds, feels the overwhelming urge to destroy.  Many in the scientific community assert ets.that he "wants more p"  Whatever the reasons behind these destructive rampages, we must band together and fight back our world lest be destroyed.</p>
         <p>His very existance threatens the planet that we live on.  Since his emergence in April 2013, Opie, the Destroyer of Worlds, has been on a world wide rampage of distruction.  <a href="http://en.wikipedia.org/wiki/New_York_City" target="_blank">New York</a>, <a href="http://en.wikipedia.org/wiki/Tokyo" target="_blank">Tokyo</a>, and <a href="http://en.wikipedia.org/wiki/Sydney" target="_blank">Sydney</a> have all suffered from his wrath.</p>
