--- a/ollie-thra.html
+++ b/ollie-thra.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
     <title>Opie vs. Ollie-thra</title>
     <link href="css/styles.css" type="text/css" rel="stylesheet" />
 
@@ -23,9 +24,9 @@
     </header>
     <div id="content" class="clearfix">
       <section>
-        <h1 class="center">Opie vs. Ollie-thra</h1>
-        <img id="star" src="img/opie_star.png" alt="star of darkness" >
-        <img id="star" class="right" src="img/opie_star.png" alt="star of darkness" >
+        <h2 class="center">Opie vs. Ollie-thra</h2>
+        <img class="star" src="img/opie_star.png" alt="star of darkness" >
+        <img class="star right" src="img/opie_star.png" alt="star of darkness" >
         
         <p>In an attempt to quell the on going rampage of Opie, Destroyer of Worlds, the U.N. authorized the summoning of Ollie-thra, and an epic battle ensued.  In the waters of Sydney Harbor, Ollie-thra struck at Opie, Destroyer of Worlds.  As these two ferocious beasts struggled for dominance, stray laser beams and gouts of flame counsumed much of the waterfront.</p>
         <table>
