--- a/tokyo.html
+++ b/tokyo.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
     <title>Opie Rampages through Tokyo.</title>
     <link href="css/styles.css" type="text/css" rel="stylesheet" />
 
@@ -23,9 +24,9 @@
     </header>
     <div id="content" class="clearfix">
       <section>
-        <h1 class="center">Opie Rampages Through Tokyo.</h1>
-        <img id="star" src="img/opie_star.png" alt="star of darkness" >
-        <img id="star" class="right" src="img/opie_star.png" alt="star of darkness" >
+        <h2 class="center">Opie Rampages Through Tokyo.</h2>
+        <img class="star" src="img/opie_star.png" alt="star of darkness" >
+        <img class="star right" src="img/opie_star.png" alt="star of darkness" >
         <p>Opie, the Destroyer of Worlds, began his reign of distruction in Tokyo.  This debut attack was swift and brutal.</p>
         <h2>Statistics of Destruction</h2>
         <ul>
