--- a/new-york.html
+++ b/new-york.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
     <title>Opie Destroys New York City.</title>
     <link href="css/styles.css" type="text/css" rel="stylesheet" />
 
@@ -23,9 +24,9 @@
     </header>
     <div id="content" class="clearfix">
       <section>
-        <h1 class="center">Opie Destroys New York City.</h1>
-        <img id="star" src="img/opie_star.png" alt="star of darkness" >
-        <img id="star" class="right" src="img/opie_star.png" alt="star of darkness" >
+        <h2> class="center">Opie Destroys New York City.</h2>
+        <img class="star" src="img/opie_star.png" alt="star of darkness" >
+        <img class="star right" src="img/opie_star.png" alt="star of darkness" >
         <p>Opie's attack of New York City was epic and devestating.  He left the city in absolute shambles.  All is woe and loss.</p>
         <h2>Route of Destruction</h2>
         <ol>
