--- a/template.html
+++ b/template.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <meta charset="UTF-8">
+    <title>Template</title>
     <link href="css/styles.css" type="text/css" rel="stylesheet" />
 
   </head>
@@ -23,9 +24,9 @@
     </header>
     <div id="content" class="clearfix">
       <section>
-        <h1 class="center">Heading</h1>
-        <img id="star" src="img/opie_star.png" alt="star of darkness" >
-        <img id="star" class="right" src="img/opie_star.png" alt="star of darkness" >
+        <h2 class="center">Heading</h2>
+        <img class="star" src="img/opie_star.png" alt="star of darkness" >
+        <img class="star right" src="img/opie_star.png" alt="star of darkness" >
         <p>Auctor vel nec dis tincidunt augue porta ac, magna nunc vel ut et, mattis cras et, lacus diam, lacus lorem vel aenean amet dis. Pulvinar? Diam lundium, elementum ridiculus et? Et habitasse platea pulvinar non et, cursus auctor tincidunt eu, pulvinar ridiculus. Egestas phasellus, habitasse et velit eros vel non sit ut, rhoncus rhoncus, magna. Elit, tincidunt integer rhoncus porta porttitor proin lorem. Augue cum dictumst sit ac adipiscing quis! Tristique pulvinar, ac diam sagittis turpis. In. Enim hac ut, pulvinar sagittis sed tristique, sagittis porta, magnis eu nec cum, enim, mauris natoque pid? Et pulvinar. Amet et augue ac, hac, eros a diam sagittis urna nunc purus! Urna sit enim? Lacus eros eros, porta. Turpis elementum, phasellus porta et urna, adipiscing, platea proin diam in lacus nisi nascetur. Nunc! Elementum? Lectus lundium integer, mus hac. Phasellus ut scelerisque lundium porttitor! Porta aliquet, parturient vel parturient parturient, augue risus? Lundium.</p>
       </section>
       <aside>
