fix minor html errors

--- a/new-york.html
+++ b/new-york.html
@@ -15,7 +15,7 @@
         <h6>Presented to raise public awareness by Wade Phillips</h6>
       <nav>
       <ul>
-        <li><a href="index.html">About</a></li>
+        <li><a href="index.html">Opie</a></li>
         <li><a href="tokyo.html">Opie vs. Tokyo</a></li>
         <li class="active"><a href="new-york.html">Opie vs. New York</a></li>
         <li><a href="ollie-thra.html">Opie vs. Ollie-thra</a></li>
@@ -24,7 +24,7 @@
     </header>
     <div id="content" class="clearfix">
       <section>
-        <h2> class="center">Opie Destroys New York City.</h2>
+        <h2 class="center">Opie Destroys New York City.</h2>
         <img class="star" src="img/opie_star.png" alt="star of darkness" >
         <img class="star right" src="img/opie_star.png" alt="star of darkness" >
         <p>Opie's attack of New York City was epic and devestating.  He left the city in absolute shambles.  All is woe and loss.</p>
