--- a/template.html
+++ b/template.html
@@ -15,7 +15,7 @@
         <h6>Presented to raise public awareness by Wade Phillips</h6>
       <nav>
       <ul>
-        <li class="active"><a href="index.html">About</a></li>
+        <li class="active"><a href="index.html">Opie</a></li>
         <li><a href="tokyo.html">Opie vs. Tokyo</a></li>
         <li><a href="new-york.html">Opie vs. New York</a></li>
         <li><a href="ollie-thra.html">Opie vs. Ollie-thra</a></li>
